--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -1,5 +1,6 @@
 footer {
     padding: 20vh;
+    padding-top: 24vh;
     background-color: hsl(216, 53%, 9%);
 }
 
